[package]
name = "schnauzer-raising"
version = "0.1.0"
edition = "2021"

[lib]
# staticlib: for ios
# cdylib: for wasm, android
# rlib: for desktop
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = [
    "bevy/bevy_window",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_ui",
    "bevy/bevy_text",
    "bevy/default_font",
    "bevy/png",
    "bevy/bevy_render",
]
inspector = ["bevy-inspector-egui", "iyes_perf_ui"]
webgl2 = ["bevy/webgl2"]
webgpu = ["bevy/webgpu"]
android = ["bevy/android-native-activity", "bevy/android_shared_stdcxx"]
# ios = ["bevy/ios_simulator"]

[dependencies]
bevy = { version = "0.15.1", default-features = false }
bevy_asset_loader = "0.22.0"
bevy_common_assets = "0.12.0"
bevy_crossbeam_event = "0.7.0"

bevy-inspector-egui = { version = "0.29.1", features = [
    "bevy_render",
], default-features = false, optional = true }
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", branch = "main", optional = true }


# desktop dependencies
[target.'cfg(not(any(target_os = "ios", target_os = "android", target_family = "wasm")))'.dependencies]
directories = "5.0"

# android dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni_fn = "0.1"
jni = "0.21"
ndk-context = "0.1"

# ios dependencies
[target.'cfg(target_os = "ios")'.dependencies]
raw-window-handle = "0.6"

# wasm dependencies
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'         # 최적의 크기 감소를 위한 최적화 (z는 크기 기준, s는 성능 기준)
lto = true              # 'thin'보다 더 높은 수준의 LTO (fat은 더 많은 크기 최적화 제공)
codegen-units = 1       # 코드 생성 단위를 1로 설정하여 최적화
panic = 'abort'         # 패닉 시 스택 추적을 제외하여 크기 감소
debug = false           # 디버그 심볼 제거
overflow-checks = false # 오버플로 체크 제거
strip = true
